--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -124,7 +124,8 @@ p {
 /* Mobile View */
 @media (max-width: 768px) {
   body {
-    width: 100vw;
+    max-width: 100vw;
+    height: auto;
   }
 
   .talks-workshops-images img {
@@ -143,14 +144,17 @@ p {
   }
 
   .teaching-image {
-    scale: 0.07;  
+    scale: 0.06;  
     display: flex;
     justify-content: center;
-    margin: -450px 0 -450px 0;
+    margin: -500px 10vw -500px 10vw;
   }
 
   .talks-workshops-final-image {
     scale: 2;
+    width: fit-content;
+    height: fit-content;
+    margin: 0 auto;
   }
 }
 
