--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -62,7 +62,7 @@ body, html {
   align-items: center;
   padding: 10px;
   text-decoration: none;
-  background-color: rgb(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.309);
   border: 1px solid pink;
   border-radius: 10px;
 }
