Removed background of TnW page

--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -16,7 +16,7 @@ body {
   margin-top: 20px;
   border: 2px solid pink;
   border-radius: 5px;
-  background-color: rgb(255, 255, 255, 0.3);
+  /* background-color: rgb(255, 255, 255, 0.3); */
 }
 
 h2 {
