--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -6,13 +6,14 @@
   padding: 20px;
 }
 
-.divider {
-  height: px;
+.pub-divider {
+  height: 1px;
   color: pink;
   background-color: pink;
   border-radius: 20px;
   border: 1px solid pink;
-  margin: 0 5vw 5vw 5vw;
+  margin: 0 0 50px 0; /* Adjust margin as needed for your design */
+  opacity: 1;
 }
 
 .work-title {
