--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -186,6 +186,16 @@
   margin-left: 0px;
 }
 
+.divider {
+  height: 1px;
+  color: pink;
+  background-color: pink;
+  border-radius: 20px;
+  border: 1px solid pink;
+  margin: 0 0 20px 0; /* Adjust margin as needed for your design */
+  opacity: 1;
+}
+
 /* Mobile View */
 @media screen and (orientation: portrait) {
   body {
