--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -60,10 +60,11 @@ body, html {
   margin-top: 10px;
   display: flex;
   align-items: center;
+  width: 230px;
   padding: 10px;
   text-decoration: none;
-  /* background-color: rgba(255, 255, 255, 0.309);
-  border: 1px solid pink;
+  /* background-color: rgba(255, 255, 255, 0.309); */
+  /* border: 1px solid pink;
   border-radius: 10px; */
 }
 
