--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -183,11 +183,12 @@ body, html {
   color: black;
 }
 
-.FindMe {
+.find-me {
   font-size: 24px;
   font-weight: bold;
-  margin: 20px auto;
+  margin: 0px auto;
   text-align: center;
+  margin-top: -60px;
 }
 
 @media screen and (orientation: portrait) {
