Changed opacity on T&W animation

--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -8,10 +8,12 @@ body {
 
 @keyframes moveUp {
   from {
-    transform: translateY(8%); /* Adjust the initial translateY value */
+    transform: translateY(8%); 
+    opacity: 0;
   }
   to {
     transform: translateY(0);
+    opacity: 1;
   }
 }
 
