More minor modifications to T&W animation

--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -20,7 +20,7 @@ body {
 .talks-workshops-container {
   padding: 20px;
   text-align: center;
-  animation: moveUp 1s ease-in-out; 
+  animation: moveUp 1s ease-out; 
 }
 
 .talks-workshops-section {
